--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
   "oca-bundle",
   "oca-file",
   "oca-ast",
-  # "oca-bundle/bindings/js/wasm"
+  # "oca-bundle/bindings/js/wasm",
+  "oca-dag",
 ]
