--- a/oca-bundle/Cargo.toml
+++ b/oca-bundle/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "oca_bundle"
+path = "src/lib.rs"
+
 [features]
 format_overlay = []
 format = []
@@ -17,7 +21,8 @@ serde_json = { version = "1.0", features = ["preserve_order"] }
 serde_yaml = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 # said = "0.2.1"
-said = { path = "../../cesrox/said", features = ["macros"] }
+said = { git = "https://github.com/THCLab/cesrox", branch = "macros", features = ["macros"] }
+# said = { path = "../../cesrox/said", features = ["macros"] }
 # version = { path = "../../cesrox/version" }
 erased-serde = "0.3.16"
 wasm-bindgen = { version = "0.2.77" }
